--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,12 @@ test:php:
   cache:
     paths:
       - vendor/
+  services:
+    - mariadb
+  variables:
+    MYSQL_HOST: mariadb
+    MYSQL_DATABASE: framework-tests
+    MYSQL_ROOT_PASSWORD: password
   before_script:
     - composer install
   script:
