--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.0"
 services:
   package:
-    image: natanfelles/package
-    container_name: database-extra-package
+    image: registry.gitlab.com/aplus-framework/images/package
+    container_name: package-database-extra
     working_dir: /package
     volumes:
       - .:/package
