--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,6 +16,16 @@ jobs:
       matrix:
         php: ['8.1']
 
+    services:
+      mariadb:
+        image: mariadb
+        env:
+          MYSQL_DATABASE: framework-tests
+          MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     name: PHP ${{ matrix.php }}
 
     steps:
@@ -50,6 +60,8 @@ jobs:
           vendor/bin/phpstan analyse -vvv
 
       - name: PHPUnit
+        env:
+          DB_HOST: 127.0.0.1
         run: vendor/bin/phpunit --verbose
 
       - name: Upload coverage results to Coveralls
