--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "require": {
         "php": ">=8.1",
         "aplus/autoload": "^2.0",
-        "aplus/database": "^3.0"
+        "aplus/database": "^3.0",
+        "aplus/helpers": "^3.0"
     },
     "require-dev": {
         "ext-xdebug": "*",
