--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,14 +7,12 @@ on:
     - cron: '0 4 * * *'
 
 jobs:
-  tests:
+  mariadb:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
 
     strategy:
       fail-fast: true
-      matrix:
-        php: ['8.1']
 
     services:
       mariadb:
@@ -26,7 +24,7 @@ jobs:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
-    name: PHP ${{ matrix.php }}
+    name: PHP 8.1 - MariaDB
 
     steps:
       - name: Checkout
@@ -35,7 +33,8 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
+          php-version: 8.1
+          ini-values: mysqli.allow_local_infile=On
           tools: composer
           coverage: xdebug
 
@@ -57,7 +56,7 @@ jobs:
 
       - name: PHPStan
         run:
-          vendor/bin/phpstan analyse -vvv
+          vendor/bin/phpstan analyse --xdebug -vvv
 
       - name: PHPUnit
         env:
@@ -72,4 +71,44 @@ jobs:
           cp build/coverage/clover.xml build/logs/clover.xml
           composer global require php-coveralls/php-coveralls
           php-coveralls --coverage_clover=build/logs/clover.xml -v
-        if: matrix.php == '8.1'
+
+  mariadb-last:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+
+    strategy:
+      fail-fast: true
+
+    services:
+      mariadb:
+        image: mariadb
+        env:
+          MYSQL_DATABASE: framework-tests
+          MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    name: PHP 8.2 - MariaDB
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          ini-values: mysqli.allow_local_infile=On
+          tools: composer
+          coverage: xdebug
+
+      - name: Install dependencies
+        run:
+          composer update
+
+      - name: PHPUnit
+        env:
+          DB_HOST: 127.0.0.1
+        run: vendor/bin/phpunit --verbose
+
