Run test with PHP latest

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -93,7 +93,7 @@ jobs:
           - 3306:3306
         options: --health-cmd="healthcheck.sh --su-mysql --connect --innodb_initialized" --health-interval=10s --health-timeout=5s --health-retries=3
 
-    name: PHP 8.2 - MariaDB
+    name: PHP Latest - MariaDB
 
     steps:
       - name: Checkout
@@ -102,7 +102,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.2
+          php-version: latest
           ini-values: mysqli.allow_local_infile=On
           tools: composer
           coverage: xdebug
@@ -114,5 +114,5 @@ jobs:
       - name: PHPUnit
         env:
           DB_HOST: 127.0.0.1
-        run: vendor/bin/phpunit --verbose
+        run: vendor/bin/phpunit
 
